<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:orientation="vertical"
    tools:context=".ViewModel.Firebase.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:alpha="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="28dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/loginicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="124dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/app_name"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </LinearLayout>
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome"
                android:textColor="@color/primary"
                android:textSize="32sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please Log In"
                android:alpha="0.7"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter email"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:padding="12dp"
                android:inputType="textEmailAddress" />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:padding="12dp"
                android:inputType="textPassword"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Remember Me"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"/>
                <TextView
                    android:id="@+id/forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot Password?"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="LOGIN"
                app:cornerRadius="32dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_account"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Create Account"
                app:cornerRadius="32dp"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Or Login With"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:alpha="0.7"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:id="@+id/google"
                    android:background="@drawable/google" />
            </LinearLayout>

        </LinearLayout>
        </androidx.cardview.widget.CardView>
</RelativeLayout>
