...
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="CONFIRM"
                app:cornerRadius="32dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/remembered_pass"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Remembered Password?"
                app:cornerRadius="32dp"/>
            <View
                android:layout_width="wrap_content"
...
