<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:orientation="vertical"
    tools:context=".ViewModel.Firebase.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:alpha="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="28dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/loginicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="124dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/app_name"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>


        </LinearLayout>

    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create Your Account"
                android:textColor="@color/primary"
                android:textSize="32sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter your info"
                android:alpha="0.7"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter email"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:padding="12dp"
                android:inputType="textEmailAddress" />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:padding="12dp"
                android:inputType="textPassword"
                />
            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm Password"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:padding="12dp"
                android:inputType="textPassword"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </RelativeLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="CONFIRM"
                app:cornerRadius="32dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/have_account"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Already Have an Account?"
                app:cornerRadius="32dp"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
